--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 .App {
   text-align: center;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   height: 100vh;
-  color: red;
+  width: 100%;
+  max-width: 100%;
+  color: blue;
+}
+
+pre {
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+  overflow-y: hidden;
 }
